samples/_failures_safe/1761357539_37cb6d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e17d7068.c: In function ‘main’:
./samples/SAFE/__tmp_e17d7068.c:178:9: error: expected declaration or statement at end of input
  178 |         if (fgets(input, sizeof(input), stdin) == NULL) {
      |         ^~
./samples/SAFE/__tmp_e17d7068.c:178:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e17d7068.c:178:9: error: expected declaration or statement at end of input
